--- a/GalleryMVC_With_Auth/Web.config
+++ b/GalleryMVC_With_Auth/Web.config
@@ -27,7 +27,10 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
-    <customErrors mode="Off"/>
+    <customErrors mode="On" defaultRedirect="~/Error/Index">
+      <error statusCode="404" redirect="~/Error/NotFound"/>
+      <error statusCode="403" redirect="~/Error/BadRequest"/>
+    </customErrors>
   <httpModules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
