--- a/GalleryMVC_With_Auth/Web.config
+++ b/GalleryMVC_With_Auth/Web.config
@@ -27,9 +27,9 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
-    <customErrors mode="On" defaultRedirect="~/Error/Index">
-      <error statusCode="404" redirect="~/Error/NotFound"/>
-      <error statusCode="403" redirect="~/Error/BadRequest"/>
+    <customErrors mode="On" redirectMode="ResponseRewrite" defaultRedirect="~/Errors/Index">
+      <error statusCode="404" redirect="~/Errors/NotFound"/>
+      <error statusCode="403" redirect="~/Errors/BadRequest"/>
     </customErrors>
   <httpModules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
