Add: Glimpse to project

--- a/GalleryMVC_With_Auth/Web.config
+++ b/GalleryMVC_With_Auth/Web.config
@@ -12,7 +12,7 @@
       <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
-    </sectionGroup></configSections>
+    </sectionGroup><section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-GalleryMVC_With_Auth-20150809012515.mdf;Initial Catalog=aspnet-GalleryMVC_With_Auth-20150809012515;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="Data Source=SQL5014.Smarterasp.net;Initial Catalog=DB_9D5D9A_Auth;User Id=DB_9D5D9A_Auth_admin;Password=12345678;" providerName="System.Data.SqlClient" />
@@ -28,29 +28,26 @@
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
     <customErrors mode="On" defaultRedirect="~/Errors/Index">
-      <error statusCode="404" redirect="~/Errors/NotFound"/>
-      <error statusCode="403" redirect="~/Errors/BadRequest"/>
+      <error statusCode="404" redirect="~/Errors/NotFound" />
+      <error statusCode="403" redirect="~/Errors/BadRequest" />
     </customErrors>
-  <httpModules>
+  <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
+        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
-    </httpModules></system.web>
+    <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" /></httpModules><httpHandlers>
+            <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
+        </httpHandlers></system.web>
   <system.webServer>
     <caching>
       <profiles>
-        <add extension=".jpg" policy="CacheForTimePeriod"
-                        kernelCachePolicy="DontCache" duration="00.12:00:00" />
-        <add extension=".swf" policy="CacheForTimePeriod"
-                        kernelCachePolicy="DontCache" duration="00.12:00:00" />
-        <add extension=".png" policy="CacheForTimePeriod"
-                        kernelCachePolicy="DontCache" duration="00.12:00:00" />
-        <add extension=".css" policy="CacheForTimePeriod"
-                        kernelCachePolicy="DontCache" duration="00.12:00:00" />
-        <add extension=".js" policy="CacheForTimePeriod"
-                        kernelCachePolicy="DontCache" duration="00.12:00:00" />
-        <add extension=".gif" policy="CacheForTimePeriod"
-                        kernelCachePolicy="DontCache" duration="00.12:00:00" />
+        <add extension=".jpg" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00.12:00:00" />
+        <add extension=".swf" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00.12:00:00" />
+        <add extension=".png" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00.12:00:00" />
+        <add extension=".css" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00.12:00:00" />
+        <add extension=".js" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00.12:00:00" />
+        <add extension=".gif" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00.12:00:00" />
       </profiles>
     </caching>
     <staticContent>
@@ -58,9 +55,11 @@
     </staticContent>
     <modules>
       <remove name="FormsAuthentication" />
-    <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" /><add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" /><add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" /></modules>
+    <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" /><add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" /><add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" /><add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" /></modules>
   <validation validateIntegratedModeConfiguration="false" />
-  </system.webServer>
+  <handlers>
+            <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
+        </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -117,4 +116,9 @@
   </entityFramework>
 <elmah>
   <security allowRemoteAccess="yes" />
-  </elmah></configuration>
+  </elmah><glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+      <!-- 
+          For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
+          or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
+      -->
+    </glimpse></configuration>
