--- a/GalleryMVC_With_Auth/packages.config
+++ b/GalleryMVC_With_Auth/packages.config
@@ -5,6 +5,9 @@
   <package id="elmah.corelibrary" version="1.2" targetFramework="net451" />
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net451" />
+  <package id="Glimpse.AspNet" version="1.9.2" targetFramework="net451" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net451" />
   <package id="Jmelosegui.Mvc.Googlemap" version="0.7.0.1" targetFramework="net451" />
   <package id="jQuery" version="2.1.4" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
