--- a/GalleryMVC_With_Auth/packages.config
+++ b/GalleryMVC_With_Auth/packages.config
@@ -31,9 +31,14 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Modernizr" version="2.6.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
+  <package id="Ninject" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net451" />
+  <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net451" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="Twitter.Bootstrap.Bootswatch.Lumen" version="3.2.0.0" targetFramework="net451" />
   <package id="Twitter.Bootstrap.Bootswatch.Slate" version="3.2.0.0" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
