--- a/GalleryMVC_With_Auth/Web.config
+++ b/GalleryMVC_With_Auth/Web.config
@@ -17,7 +17,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-GalleryMVC_With_Auth-20150809012515.mdf;Initial Catalog=aspnet-GalleryMVC_With_Auth-20150809012515;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=SQL5014.Smarterasp.net;Initial Catalog=DB_9D5D9A_Auth;User Id=DB_9D5D9A_Auth_admin;Password=12345678;" providerName="System.Data.SqlClient" />
+    <add name="DBcon" connectionString="Data Source=SQL5014.Smarterasp.net;Initial Catalog=DB_9D5D9A_Auth;User Id=DB_9D5D9A_Auth_admin;Password=12345678;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
