Add: EF Picture Repository

--- a/GalleryMVC_With_Auth.Domain/GalleryMVC_With_Auth.Domain.csproj
+++ b/GalleryMVC_With_Auth.Domain/GalleryMVC_With_Auth.Domain.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Abstract\IPicturesRepository.cs" />
     <Compile Include="Concrete\DBcon.cs" />
+    <Compile Include="Concrete\EFPictureRepository.cs" />
     <Compile Include="Entities\Picture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
