--- a/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
+++ b/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
@@ -212,6 +212,42 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\blueimp-gallery2\ans-blueimp-gallery2-set.js" />
+    <Content Include="Content\blueimp-gallery2\ans-blueimp-gallery2-set.min.js" />
+    <Content Include="Content\blueimp-gallery2\css\blueimp-gallery-indicator.css" />
+    <Content Include="Content\blueimp-gallery2\css\blueimp-gallery-indicator.min.css" />
+    <Content Include="Content\blueimp-gallery2\css\blueimp-gallery-video.css" />
+    <Content Include="Content\blueimp-gallery2\css\blueimp-gallery-video.min.css" />
+    <Content Include="Content\blueimp-gallery2\css\blueimp-gallery.css" />
+    <Content Include="Content\blueimp-gallery2\css\blueimp-gallery.min.css" />
+    <Content Include="Content\blueimp-gallery2\css\demo.css" />
+    <Content Include="Content\blueimp-gallery2\css\demo.min.css" />
+    <Content Include="Content\blueimp-gallery2\img\error.png" />
+    <Content Include="Content\blueimp-gallery2\img\error.svg" />
+    <Content Include="Content\blueimp-gallery2\img\loading.gif" />
+    <Content Include="Content\blueimp-gallery2\img\play-pause.png" />
+    <Content Include="Content\blueimp-gallery2\img\play-pause.svg" />
+    <Content Include="Content\blueimp-gallery2\img\video-play.png" />
+    <Content Include="Content\blueimp-gallery2\img\video-play.svg" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-fullscreen.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-fullscreen.min.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-indicator.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-indicator.min.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-video.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-video.min.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-vimeo.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-vimeo.min.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-youtube.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-youtube.min.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery.min.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-helper.js" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-helper.min.js" />
+    <Content Include="Content\blueimp-gallery2\js\demo.js" />
+    <Content Include="Content\blueimp-gallery2\js\demo.min.js" />
+    <Content Include="Content\blueimp-gallery2\js\jquery.blueimp-gallery.js" />
+    <Content Include="Content\blueimp-gallery2\js\jquery.blueimp-gallery.min.js" />
+    <Content Include="Content\blueimp-gallery2\___version.txt" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.lumen.css" />
     <Content Include="Content\bootstrap.lumen.min.css" />
@@ -350,6 +386,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\BlueimpGal.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="fonts\codropsicons\codropsicons.eot" />
@@ -358,6 +395,17 @@
     <Content Include="fonts\feathericons\feathericons.eot" />
     <Content Include="fonts\feathericons\feathericons.ttf" />
     <Content Include="fonts\feathericons\feathericons.woff" />
+    <Content Include="Content\blueimp-gallery2\_install\_Layout.cshtml" />
+    <Content Include="Content\blueimp-gallery2\js\jquery.blueimp-gallery.min.js.map" />
+    <Content Include="Content\blueimp-gallery2\js\demo.min.js.map" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-helper.min.js.map" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery.min.js.map" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-youtube.min.js.map" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-vimeo.min.js.map" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-video.min.js.map" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-indicator.min.js.map" />
+    <Content Include="Content\blueimp-gallery2\js\blueimp-gallery-fullscreen.min.js.map" />
+    <Content Include="Content\blueimp-gallery2\ans-blueimp-gallery2-set.min.js.map" />
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <None Include="Properties\PublishProfiles\somee.pubxml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
