--- a/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
+++ b/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\ThumbnailCreater.cs" />
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -407,10 +408,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\images\akvarel\" />
-    <Folder Include="Content\images\batik\" />
-    <Folder Include="Content\images\pastel\" />
-    <Folder Include="Content\images\zivopis\" />
+    <Folder Include="Content\images\akvarel\tmb\" />
+    <Folder Include="Content\images\batik\tmb\" />
+    <Folder Include="Content\images\pastel\tmb\" />
+    <Folder Include="Content\images\zivopis\tmb\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
