--- a/GalleryMVC_With_Auth/Web.config
+++ b/GalleryMVC_With_Auth/Web.config
@@ -44,7 +44,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.1" />
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="10000" />
     <customErrors mode="On" defaultRedirect="~/Errors/Index">
       <error statusCode="404" redirect="~/Errors/NotFound" />
       <error statusCode="403" redirect="~/Errors/BadRequest" />
