Fix: bug with static album upload

--- a/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
+++ b/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
@@ -258,6 +258,24 @@
     <Content Include="Content\bootstrap.slate.min.css" />
     <Content Include="Content\hover_effects\component.css" />
     <Content Include="Content\hover_effects\normalize.css" />
+    <Content Include="Content\images\Batik\0.JPG" />
+    <Content Include="Content\images\Batik\1.JPG" />
+    <Content Include="Content\images\Batik\2.JPG" />
+    <Content Include="Content\images\Batik\3.JPG" />
+    <Content Include="Content\images\Batik\4.JPG" />
+    <Content Include="Content\images\Batik\5.jpg" />
+    <Content Include="Content\images\Batik\6.jpg" />
+    <Content Include="Content\images\Batik\7.jpg" />
+    <Content Include="Content\images\Batik\8.jpg" />
+    <Content Include="Content\images\Batik\tmb\0.thumb.jpg" />
+    <Content Include="Content\images\Batik\tmb\1.thumb.jpg" />
+    <Content Include="Content\images\Batik\tmb\2.thumb.jpg" />
+    <Content Include="Content\images\Batik\tmb\3.thumb.jpg" />
+    <Content Include="Content\images\Batik\tmb\4.thumb.jpg" />
+    <Content Include="Content\images\Batik\tmb\5.thumb.jpg" />
+    <Content Include="Content\images\Batik\tmb\6.thumb.jpg" />
+    <Content Include="Content\images\Batik\tmb\7.thumb.jpg" />
+    <Content Include="Content\images\Batik\tmb\8.thumb.jpg" />
     <Content Include="Content\images\hover_test\1.jpg" />
     <Content Include="Content\images\hover_test\10.jpg" />
     <Content Include="Content\images\hover_test\11.jpg" />
@@ -278,6 +296,8 @@
     <Content Include="Content\images\icons\3_opt.jpg" />
     <Content Include="Content\images\icons\4_opt.jpg" />
     <Content Include="Content\images\icons\9_opt.jpg" />
+    <Content Include="Content\images\Pastel\0.jpg" />
+    <Content Include="Content\images\Pastel\tmb\0.thumb.jpg" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -408,11 +428,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\images\Batik\tmb\" />
     <Folder Include="Content\images\Graphics\tmb\" />
     <Folder Include="Content\images\Guache\tmb\" />
     <Folder Include="Content\images\Painting\tmb\" />
-    <Folder Include="Content\images\Pastel\tmb\" />
     <Folder Include="Content\images\Watercolor\tmb\" />
   </ItemGroup>
   <ItemGroup>
