--- a/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
+++ b/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
@@ -297,6 +297,7 @@
     <Content Include="Content\images\icons\4_opt.jpg" />
     <Content Include="Content\images\icons\7_opt.jpg" />
     <Content Include="Content\images\icons\9_opt.jpg" />
+    <Content Include="Content\images\icons\blank.gif" />
     <Content Include="Content\images\Pastel\0.jpg" />
     <Content Include="Content\images\Pastel\tmb\0.thumb.jpg" />
     <Content Include="Content\sticky-footer.css" />
@@ -369,6 +370,8 @@
     <Content Include="Scripts\jquery-2.1.4.min.js" />
     <Content Include="Scripts\jquery-2.1.4.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.lazyload.js" />
+    <Content Include="Scripts\jquery.lazyload.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
