--- a/GalleryMVC_With_Auth/packages.config
+++ b/GalleryMVC_With_Auth/packages.config
@@ -11,6 +11,7 @@
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net451" />
   <package id="Jmelosegui.Mvc.Googlemap" version="0.7.0.1" targetFramework="net451" />
   <package id="jQuery" version="2.1.4" targetFramework="net451" />
+  <package id="Jquery.LazyLoad" version="1.8.4" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net451" />
