--- a/GalleryMVC_With_Auth/packages.config
+++ b/GalleryMVC_With_Auth/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
   <package id="Ans.Mvc5.BlueimpGallery" version="2.15.4" targetFramework="net452" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
@@ -16,7 +17,7 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />s
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
