--- a/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
+++ b/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
@@ -430,8 +430,7 @@
     <Content Include="Views\Roles\Create.cshtml" />
     <Content Include="Views\AdminPanel\Index.cshtml" />
     <Content Include="Views\AdminPanel\Upload.cshtml" />
-    <Content Include="Views\Images\Find.cshtml" />
-    <Content Include="Views\Images\Found.cshtml" />
+    <Content Include="Views\StartHome\Found.cshtml" />
     <Content Include="Views\Shared\_GalleryPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
