--- a/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
+++ b/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
@@ -334,6 +334,7 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="Content\search.css" />
     <Content Include="Content\transp_menu.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\codropsicons\codropsicons.svg" />
