Moving: fonts files

--- a/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
+++ b/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
@@ -254,14 +254,10 @@
     <Content Include="Content\blueimp-gallery2\js\jquery.blueimp-gallery.js" />
     <Content Include="Content\blueimp-gallery2\js\jquery.blueimp-gallery.min.js" />
     <Content Include="Content\blueimp-gallery2\___version.txt" />
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.lumen.css" />
-    <Content Include="Content\bootstrap.lumen.min.css" />
-    <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\bootstrap.slate.css" />
-    <Content Include="Content\bootstrap.slate.min.css" />
-    <Content Include="Content\hover_effects\component.css" />
-    <Content Include="Content\hover_effects\normalize.css" />
+    <Content Include="Content\css\bootstrap.css" />
+    <Content Include="Content\css\bootstrap.min.css" />
+    <Content Include="Content\css\hover_effects\component.css" />
+    <Content Include="Content\css\hover_effects\normalize.css" />
     <Content Include="Content\images\Batik\0.JPG" />
     <Content Include="Content\images\Batik\1.JPG" />
     <Content Include="Content\images\Batik\2.JPG" />
@@ -303,7 +299,7 @@
     <Content Include="Content\images\icons\9_opt.jpg" />
     <Content Include="Content\images\Pastel\0.jpg" />
     <Content Include="Content\images\Pastel\tmb\0.thumb.jpg" />
-    <Content Include="Content\sticky-footer.css" />
+    <Content Include="Content\css\sticky-footer.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -337,24 +333,24 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
-    <Content Include="Content\search.css" />
-    <Content Include="Content\transp_menu.css" />
+    <Content Include="Content\css\search.css" />
+    <Content Include="Content\css\transp_menu.css" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\codropsicons\codropsicons.svg" />
-    <Content Include="fonts\codropsicons\license.txt" />
-    <Content Include="fonts\feathericons\feathericons.svg" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\fonts\codropsicons\codropsicons.svg" />
+    <Content Include="Content\fonts\codropsicons\license.txt" />
+    <Content Include="Content\fonts\feathericons\feathericons.svg" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\css\Site.css" />
     <Content Include="Scripts\BlueimpGal.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="fonts\codropsicons\codropsicons.eot" />
-    <Content Include="fonts\codropsicons\codropsicons.ttf" />
-    <Content Include="fonts\codropsicons\codropsicons.woff" />
-    <Content Include="fonts\feathericons\feathericons.eot" />
-    <Content Include="fonts\feathericons\feathericons.ttf" />
-    <Content Include="fonts\feathericons\feathericons.woff" />
+    <Content Include="Content\fonts\codropsicons\codropsicons.eot" />
+    <Content Include="Content\fonts\codropsicons\codropsicons.ttf" />
+    <Content Include="Content\fonts\codropsicons\codropsicons.woff" />
+    <Content Include="Content\fonts\feathericons\feathericons.eot" />
+    <Content Include="Content\fonts\feathericons\feathericons.ttf" />
+    <Content Include="Content\fonts\feathericons\feathericons.woff" />
     <Content Include="Content\blueimp-gallery2\_install\_Layout.cshtml" />
     <Content Include="Content\blueimp-gallery2\js\jquery.blueimp-gallery.min.js.map" />
     <Content Include="Content\blueimp-gallery2\js\demo.min.js.map" />
@@ -441,9 +437,9 @@
     <Folder Include="Content\images\Watercolor\tmb\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
