--- a/GalleryMVC_With_Auth/Web.config
+++ b/GalleryMVC_With_Auth/Web.config
@@ -44,7 +44,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" maxRequestLength="100000" />
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="100000"  enableVersionHeader="false"/>
     <customErrors mode="On" defaultRedirect="~/Errors/Index">
       <error statusCode="404" redirect="~/Errors/NotFound" />
       <error statusCode="403" redirect="~/Errors/BadRequest" />
@@ -62,6 +62,11 @@
     </httpHandlers>
   </system.web>
   <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <remove name="X-Powered-By" />
+      </customHeaders>
+    </httpProtocol>
     <caching>
       <profiles>
         <add extension=".jpg" policy="CacheForTimePeriod" kernelCachePolicy="DontCache" duration="00.12:00:00" />
