--- a/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
+++ b/GalleryMVC_With_Auth/GalleryMVC_With_Auth.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Picture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Defines.cs" />
     <Compile Include="Startup.cs" />
